--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-spinners": "^0.13.4",
+    "reactstrap": "^9.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
